--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Keyword-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Keyword-Strings.json
@@ -16,5 +16,13 @@
       "multikeyword"
     ],
     "DESCRIPTION": "Make sure the first element in the NAMES is the same as your PROPER_NAME. The rest is to match keywords like the single word keyword."
+  },
+  {
+    "PROPER_NAME": "Intoxication",
+    "NAMES": [
+      "intoxication",
+      "intoxicated"
+    ],
+    "DESCRIPTION": "Brewmaster cards have certain bonuses at 100 intoxication. You lose 25% of intoxication each turn."
   }
 ]
