--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Stance-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Stance-Strings.json
@@ -1,5 +1,5 @@
 {
-  "Intoxicated": {
+  "theBrewmaster:Intoxicated": {
     "NAME": "Intoxicated",
     "DESCRIPTION": [
       "Certain Brewmaster cards will have special effects while Intoxicated."
