--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Character-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Character-Strings.json
@@ -1,8 +1,8 @@
 {
   "theBrewmaster:DefaultCharacter": {
     "NAMES": [
-      "The Default",
-      "the Default"
+      "The Brewmaster",
+      "the Brewmaster"
     ],
     "TEXT": [
       "THE_DEFAULT exists and is valid. THE_DEFAULT wishes to T o uuuch# NL Second placeholder line of description text.",
