--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Relic-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Relic-Strings.json
@@ -30,5 +30,12 @@
       ".",
       "Select a card to bottle for "
     ]
+  },
+  "theBrewmaster:BeerSteinRelic": {
+    "NAME": "Beer Stein",
+    "FLAVOR": "I've never heard of one drinks too many.",
+    "DESCRIPTIONS": [
+      "Retain your intoxication level between floors and acts."
+    ]
   }
 }
