--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Power-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Power-Strings.json
@@ -25,5 +25,12 @@
       "At the end of your turn, gain ",
       "% of your Intoxication as Block (Rounded up.)"
     ]
+  },
+  "theBrewmaster:PocketFlaskPower": {
+    "NAME": "Pocket Flask",
+    "DESCRIPTIONS": [
+      "Gain ",
+      " Intoxication whenever you play a brew card."
+    ]
   }
 }
