Update Lean In upgrade description

--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Card-Strings.json
@@ -104,7 +104,7 @@
   },
   "theBrewmaster:LeanIn": {
     "NAME": "Lean In",
-    "DESCRIPTION": "{@@}Consume 10% of your intoxication. Deal {!M!|2=twice }that much damage."
+    "DESCRIPTION": "{@@}Consume 10% of your intoxication. Deal {!M!|2=#gtwice }that much damage."
   },
   "theBrewmaster:FortifyingBrew": {
     "NAME": "Fortifying Brew",
