Remove references to TheDefault

--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Character-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Character-Strings.json
@@ -1,5 +1,5 @@
 {
-  "theBrewmaster:DefaultCharacter": {
+  "theBrewmaster:BrewmasterCharacter": {
     "NAMES": [
       "The Brewmaster",
       "the Brewmaster"
