--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Power-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Power-Strings.json
@@ -31,5 +31,13 @@
       "Reducing unblocked damage by half. Taking ",
       " damage at the end of combat."
     ]
+  },
+  "theBrewmaster:VasoimmolationPower": {
+    "NAME": "Vasoimmolation",
+    "DESCRIPTIONS": [
+      "You and each enemy takes ",
+      "Each enemy takes ",
+      "% of you Intoxication as damage at the end of your turn."
+    ]
   }
 }
