--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Card-Strings.json
@@ -143,6 +143,6 @@
   "theBrewmaster:Vasoimmolation": {
     "NAME": "Vasoimmolation",
     "DESCRIPTION": "At the end of your turn, deal !M!% of your thebrewmaster:Intoxication as damage to yourself and all enemies.",
-    "UPGRADED_DESCRIPTION": "At the end of your turn, deal !M!% of your thebrewmaster:Intoxication as damage to [#7fff00]all enemies.[]"
+    "UPGRADE_DESCRIPTION": "At the end of your turn, deal !M!% of your thebrewmaster:Intoxication as damage to [#7fff00]all enemies.[]"
   }
 }
