Added Fermented Tea

--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Potion-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/DefaultMod-Potion-Strings.json
@@ -1,6 +1,6 @@
 {
-"theBrewmaster:PlaceholderPotion": {
-        "NAME": "Placeholder Potion",
-        "DESCRIPTIONS": ["Gain ", " At the end of your turn, lose ", " Strength."]
+"theBrewmaster:FermentedTea": {
+        "NAME": "Fermented Tea",
+        "DESCRIPTIONS": ["Gain ", " Intoxication."]
 }
 }
